# autonomous-quality-agent

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md
.aqa/: config.yaml
.github/workflows/: ci.yml  release.yml
brain/: pyproject.toml  pyrightconfig.json  requirements.txt
brain/.aqa/: config.yaml
brain/src/: __init__.py  cache.py  cli.py  config.py  main.py
brain/src/adapter/: __init__.py  format_adapter.py
brain/src/api/: __init__.py  app.py  auth.py  config.py  deps.py  rate_limit.py  telemetry.py
brain/src/api/routes/: __init__.py  auth.py  execute.py  generate.py  health.py  history.py  metrics.py  plans.py  validate.py  workspace.py
brain/src/api/schemas/: __init__.py  common.py  execute.py  generate.py  history.py  plans.py  validate.py  workspace.py
brain/src/api/websocket/: __init__.py  execute_stream.py
brain/src/cli/: __init__.py  main.py  registry.py  utils.py
brain/src/cli/commands/: __init__.py  demo_cmd.py  explain_cmd.py  generate_cmd.py  history_cmd.py  init_cmd.py  plan_cmd.py  plan_version_cmd.py  run_cmd.py  serve_cmd.py  show_cmd.py  validate_cmd.py
brain/src/errors/: __init__.py  codes.py  limits.py  structured.py
brain/src/generator/: __init__.py  llm.py  prompts.py  providers.py
brain/src/ingestion/: __init__.py  negative_cases.py  security.py  swagger.py
brain/src/llm/: __init__.py  base.py  provider_mock.py  provider_real.py  providers.py
brain/src/runner/: __init__.py  execute.py
brain/src/schema/: __init__.py  generator.py
brain/src/storage/: __init__.py  base.py  factory.py  json_backend.py  s3.py  sqlite.py
brain/src/telemetry/: __init__.py  metrics.py  tracer.py
brain/src/validator/: __init__.py  models.py  utdl_validator.py
brain/tests/: test_api.py  test_audit_security_prompts.py  test_cli.py  test_conformance.py  test_dummy.py  test_e2e_auth.py  test_e2e_extreme.py  test_e2e_runner_execution.py  test_errors.py  test_format_adapter.py  test_integration.py  test_integration_brain_runner.py  test_llm_providers.py  test_negative_cases.py  test_plan_versioning.py  test_security.py  test_storage.py  test_swagger.py  test_validator.py
docs/: Technical Design Document (TDD).md  architecture.md  bug-cli.md  developer-guide.md  environment_variables.md  error_codes.md  interface.md  plugin_development.md  reference-tdd.md  user-guide.md
runner/: Cargo.toml
runner/src/: main.rs
runner/src/context/: mod.rs
runner/src/errors/: mod.rs
runner/src/executors/: graphql.rs  http.rs  mod.rs  wait.rs
runner/src/extractors/: mod.rs
runner/src/limits/: mod.rs
runner/src/loader/: mod.rs
runner/src/planner/: mod.rs
runner/src/protocol/: mod.rs
runner/src/retry/: mod.rs
runner/src/telemetry/: mod.rs
runner/src/validation/: mod.rs
schemas/: context.schema.json  openapi.json  runner_report.schema.json  utdl.schema.json
schemas/examples/: demo_plan.json  login_flow.json
schemas/mocks/: README.md  execute.json  generate.json  health.json  history-stats.json  history.json  plans.json  validate.json  websocket-events.json
scripts/: validate_schema.py
ui/: .prettierrc  package-lock.json  package.json
ui/src/app/: layout.tsx  page.tsx
ui/src/app/execute/: page.tsx
ui/src/app/generate/: page.tsx
ui/src/app/history/: page.tsx
ui/src/app/history/[id]/: page.tsx
ui/src/app/plans/: page.tsx
ui/src/app/plans/[id]/: page.tsx
ui/src/app/plans/[id]/edit/: page.tsx
ui/src/app/settings/: page.tsx
ui/src/components/dashboard/: quick-actions.tsx  recent-executions.tsx  stats-cards.tsx
ui/src/components/layout/: error-boundary.tsx  header.tsx  sidebar.tsx  theme-toggle.tsx
ui/src/components/ui/: loading.tsx
ui/src/lib/: providers.tsx
ui/src/lib/api/: client.ts
ui/src/lib/hooks/: queries.ts  use-settings.tsx  use-theme.tsx  use-websocket.ts
ui/src/types/: api.ts
