[project]
name = "autonomous-quality-agent-brain"
version = "0.1.0"
description = "Brain module for the Autonomous Quality Agent - LLM-powered test plan generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "litellm>=1.0.0",
    "openapi-spec-validator>=0.7.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pyright]
include = ["src", "tests"]
exclude = [".venv", "__pycache__"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
